--- a/website/index.html
+++ b/website/index.html
@@ -31,7 +31,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Joshua Asari</strong>.</h1>
 							</header>
-							<p>And this is <strong>my portfolio</strong>, test test test test, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>And this is my <strong>cloud-powered </strong>portfolio. This platform leverages the capabilities of AWS services such as Lambda, DynamoDB, S3, CloudFront, and Route 53 to deliver a seamless and scalable experience. By employing IaC with Terraform, I've streamlined the deployment and management of the underlying infrastructure. Additionally, CI/CD pipelines, powered by GitHub Actions, automate the testing and deployment processes, ensuring rapid and reliable updates. For a deeper dive into the project, check out my Dev.to blog linked below where I discuss the architecture, implementation details, and more. Thank you for exploring!</a></p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -43,33 +43,33 @@
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>Passionate about leveraging cloud technologies to develop innovative solutions. Skilled in backend development and eager to explore new frontiers in cloud computing. Continuously learning and growing to tackle the challenges of tomorrow's tech landscape.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="image fit"><img src="images/cloud_icon.jpg" alt="" /></span>
+								<h3>Aspiring Cloud Computing Professional</h3>
+								<p>Embracing the power of AWS services to build scalable and resilient cloud-based solutions.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="image fit"><img src="images/backend_icon.jpg" alt="" /></span>
+								<h3>Enthusiastic Back-end Developer</h3>
+								<p>Exploring server-side development to build and learn about robust and scalable systems.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<span class="image fit"><img src="images/frontend_icon.jpg" alt="" /></span>
+								<h3>Beginner Front-end Developer</h3>
+								<p>Venturing into front-end development to craft visually appealing and user-friendly interfaces.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Embarking on a journey to develop exciting projects while honing new skills along the way. Enthusiastic about collaboration and eager to dive into innovative ventures.</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -86,48 +86,48 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Magna feugiat</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Cloud Resume Challenge</a></h3>
+								<p>Dev.to blog</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Veroeros primis</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Work in Progress</a></h3>
+								<p>Check back later</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Lorem ipsum</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Work in Progress</a></h3>
+								<p>Check back later</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Tempus dolore</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Work in Progress</a></h3>
+								<p>Check back later</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Feugiat aliquam</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Work in Progress</a></h3>
+								<p>Check back later</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Sed amet ornare</a></h3>
-								<p>Ornare nulla proin odio consequat.</p>
+								<h3><a href="#">Work in Progress</a></h3>
+								<p>Check back later</p>
 							</article>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p></p>
 						<a href="#contact" class="button large scrolly">Get in touch with me</a>
 					</footer>
 				</div>
@@ -138,7 +138,7 @@
 				<div class="container medium">
 					<header>
 						<h2>Have me make stuff for you.</h2>
-						<p>Ornare nulla proin odio consequat sapien vestibulum ipsum.</p>
+						<p></p>
 					</header>
 					<div class="row">
 						<div class="col-12">
