--- a/website/index.html
+++ b/website/index.html
@@ -85,8 +85,8 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-								<h3><a href="#">Cloud Resume Challenge</a></h3>
+								<a href="#" class="image featured"><img src="images/diagram.jpg" alt="" /></a>
+								<h3><a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c">Cloud Resume Challenge</a></h3>
 								<p>Dev.to blog</p>
 							</article>
 						</div>
@@ -169,13 +169,13 @@
 							<hr />
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-								<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->	
+								<li><a href="https://www.linkedin.com/in/joshua-asari/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<!--<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
+								<li><a href="https://github.com/Jotin2" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
