Added Todo App in projects

--- a/website/index.html
+++ b/website/index.html
@@ -85,16 +85,16 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/diagram.jpg" alt="" /></a>
-								<h3><a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c">Cloud Resume Challenge</a></h3>
-								<p>Dev.to blog</p>
+								<a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c" class="image featured"><img src="images/diagram.jpg" alt="" /></a>
+								<h3><a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c">Cloud Resume Challenge Blog</a></h3>
+								<a href="https://github.com/Jotin2/aws-portfolio"><p>Github Repository</p></a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								<h3><a href="#">Work in Progress</a></h3>
-								<p>Check back later</p>
+								<a href="https://todo-app-twe3.onrender.com/" class="image featured"><img src="images/todoapppic.png" alt="" /></a>
+								<h3><a href="https://todo-app-twe3.onrender.com/">Todo App</a></h3>
+								<a href="https://github.com/Jotin2/todo-app"><p>Github Repository</p></a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
