Updated project texts

--- a/website/index.html
+++ b/website/index.html
@@ -87,14 +87,14 @@
 							<article class="box style2">
 								<a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c" class="image featured"><img src="images/diagram.jpg" alt="" /></a>
 								<h3><a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c">Cloud Resume Challenge Blog</a></h3>
-								<a href="https://github.com/Jotin2/aws-portfolio"><p>Github Repository</p></a>
+								<p>Published a Dev.to blog detailing the steps I did to create this cloud powered portfolio</p><a href="https://github.com/Jotin2/aws-portfolio"><p>Github Repository</p></a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="https://todo-app-twe3.onrender.com/" class="image featured"><img src="images/todoapppic.png" alt="" /></a>
 								<h3><a href="https://todo-app-twe3.onrender.com/">Todo App</a></h3>
-								<a href="https://github.com/Jotin2/todo-app"><p>Github Repository</p></a>
+								<p>The Todo App is a task management tool built using HTML, CSS, and primarily React.js. </p><a href="https://github.com/Jotin2/todo-app"><p>Github Repository</p></a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
