--- a/website/index.html
+++ b/website/index.html
@@ -99,9 +99,9 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Work in Progress</a></h3>
-								<p>Check back later</p>
+								<a href="https://joshsnhu2.s3.amazonaws.com/index.html" class="image featured"><img src="images/qapic.png" alt="" /></a>
+								<h3><a href="https://joshsnhu2.s3.amazonaws.com/index.html">Q&A Website</a></h3>
+								<p>Allows users to post and ask questions about Angular, Angular Cli and Typscript</p><a href="https://github.com/Jotin2/lafs-web"><p>Github Repository</p></a>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
