Added Restaurand Finder to projects

--- a/website/index.html
+++ b/website/index.html
@@ -1,151 +1,184 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>Joshua Asari Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Nav -->
-			<nav id="nav">
-				<ul class="container">
-					<li><a href="#top">Top</a></li>
-					<li><a href="#work">Work</a></li>
-					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
-					<li class="counter-number">Couldn't read views</li>
-				</ul>
-			</nav>
+<head>
+	<title>Joshua Asari Portfolio</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
 
-		<!-- Home -->
-			<article id="top" class="wrapper style1">
-				<div class="container">
-					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
-						</div>
-						<div class="col-8 col-7-large col-12-medium">
-							<header>
-								<h1>Hi. I'm <strong>Joshua Asari</strong>.</h1>
-							</header>
-							<p>And this is my <strong>cloud-powered </strong>portfolio. This platform leverages the capabilities of AWS services such as Lambda, DynamoDB, S3, CloudFront, and Route 53 to deliver a seamless and scalable experience. By employing IaC with Terraform, I've streamlined the deployment and management of the underlying infrastructure. Additionally, CI/CD pipelines, powered by GitHub Actions, automate the testing and deployment processes, ensuring rapid and reliable updates. For a deeper dive into the project, check out my Dev.to blog linked below where I discuss the architecture, implementation details, and more. Thank you for exploring!</a></p>
-							<a href="#work" class="button large scrolly">Learn about what I do</a>
-						</div>
-					</div>
+<body class="is-preload">
+
+	<!-- Nav -->
+	<nav id="nav">
+		<ul class="container">
+			<li><a href="#top">Top</a></li>
+			<li><a href="#work">Work</a></li>
+			<li><a href="#portfolio">Portfolio</a></li>
+			<li><a href="#contact">Contact</a></li>
+			<li class="counter-number">Couldn't read views</li>
+		</ul>
+	</nav>
+
+	<!-- Home -->
+	<article id="top" class="wrapper style1">
+		<div class="container">
+			<div class="row">
+				<div class="col-4 col-5-large col-12-medium">
+					<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
 				</div>
-			</article>
-
-		<!-- Work -->
-			<article id="work" class="wrapper style2">
-				<div class="container">
+				<div class="col-8 col-7-large col-12-medium">
 					<header>
-						<h2>Here's all the stuff I do.</h2>
-						<p>Passionate about leveraging cloud technologies to develop innovative solutions. Skilled in backend development and eager to explore new frontiers in cloud computing. Continuously learning and growing to tackle the challenges of tomorrow's tech landscape.</p>
+						<h1>Hi. I'm <strong>Joshua Asari</strong>.</h1>
 					</header>
-					<div class="row aln-center">
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="image fit"><img src="images/cloud_icon.jpg" alt="" /></span>
-								<h3>Aspiring Cloud Computing Professional</h3>
-								<p>Embracing the power of AWS services to build scalable and resilient cloud-based solutions.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="image fit"><img src="images/backend_icon.jpg" alt="" /></span>
-								<h3>Enthusiastic Back-end Developer</h3>
-								<p>Exploring server-side development to build and learn about robust and scalable systems.</p>
-							</section>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<section class="box style1">
-								<span class="image fit"><img src="images/frontend_icon.jpg" alt="" /></span>
-								<h3>Beginner Front-end Developer</h3>
-								<p>Venturing into front-end development to craft visually appealing and user-friendly interfaces.</p>
-							</section>
-						</div>
-					</div>
-					<footer>
-						<p>Embarking on a journey to develop exciting projects while honing new skills along the way. Enthusiastic about collaboration and eager to dive into innovative ventures.</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
-					</footer>
+					<p>And this is my <strong>cloud-powered </strong>portfolio. This platform leverages the capabilities
+						of AWS services such as Lambda, DynamoDB, S3, CloudFront, and Route 53 to deliver a seamless and
+						scalable experience. By employing IaC with Terraform, I've streamlined the deployment and
+						management of the underlying infrastructure. Additionally, CI/CD pipelines, powered by GitHub
+						Actions, automate the testing and deployment processes, ensuring rapid and reliable updates. For
+						a deeper dive into the project, check out my Dev.to blog linked below where I discuss the
+						architecture, implementation details, and more. Thank you for exploring!</a></p>
+					<a href="#work" class="button large scrolly">Learn about what I do</a>
 				</div>
-			</article>
+			</div>
+		</div>
+	</article>
 
-		<!-- Portfolio -->
-			<article id="portfolio" class="wrapper style3">
-				<div class="container">
-					<header>
-						<h2>Here’s some stuff I made recently.</h2>
-						<p></p>
-					</header>
-					<div class="row">
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c" class="image featured"><img src="images/diagram.jpg" alt="" /></a>
-								<h3><a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c">Cloud Resume Challenge Blog</a></h3>
-								<p>Published a Dev.to blog detailing the steps I did to create this cloud powered portfolio</p><a href="https://github.com/Jotin2/aws-portfolio"><p>Github Repository</p></a>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://todo-app-twe3.onrender.com/" class="image featured"><img src="images/todoapppic.png" alt="" /></a>
-								<h3><a href="https://todo-app-twe3.onrender.com/">Todo App</a></h3>
-								<p>The Todo App is a task management tool built using HTML, CSS, and primarily React.js. </p><a href="https://github.com/Jotin2/todo-app"><p>Github Repository</p></a>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="https://joshsnhu2.s3.amazonaws.com/index.html" class="image featured"><img src="images/qapic.png" alt="" /></a>
-								<h3><a href="https://joshsnhu2.s3.amazonaws.com/index.html">Q&A Website</a></h3>
-								<p>Allows users to post and ask questions about Angular, Angular Cli and Typscript</p><a href="https://github.com/Jotin2/lafs-web"><p>Github Repository</p></a>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Work in Progress</a></h3>
-								<p>Check back later</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">Work in Progress</a></h3>
-								<p>Check back later</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Work in Progress</a></h3>
-								<p>Check back later</p>
-							</article>
-						</div>
-					</div>
-					<footer>
-						<p></p>
-						<a href="#contact" class="button large scrolly">Get in touch with me</a>
-					</footer>
+	<!-- Work -->
+	<article id="work" class="wrapper style2">
+		<div class="container">
+			<header>
+				<h2>Here's all the stuff I do.</h2>
+				<p>Passionate about leveraging cloud technologies to develop innovative solutions. Skilled in backend
+					development and eager to explore new frontiers in cloud computing. Continuously learning and growing
+					to tackle the challenges of tomorrow's tech landscape.</p>
+			</header>
+			<div class="row aln-center">
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="image fit"><img src="images/cloud_icon.jpg" alt="" /></span>
+						<h3>Aspiring Cloud Computing Professional</h3>
+						<p>Embracing the power of AWS services to build scalable and resilient cloud-based solutions.
+						</p>
+					</section>
 				</div>
-			</article>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="image fit"><img src="images/backend_icon.jpg" alt="" /></span>
+						<h3>Enthusiastic Back-end Developer</h3>
+						<p>Exploring server-side development to build and learn about robust and scalable systems.</p>
+					</section>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<section class="box style1">
+						<span class="image fit"><img src="images/frontend_icon.jpg" alt="" /></span>
+						<h3>Beginner Front-end Developer</h3>
+						<p>Venturing into front-end development to craft visually appealing and user-friendly
+							interfaces.</p>
+					</section>
+				</div>
+			</div>
+			<footer>
+				<p>Embarking on a journey to develop exciting projects while honing new skills along the way.
+					Enthusiastic about collaboration and eager to dive into innovative ventures.</p>
+				<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+			</footer>
+		</div>
+	</article>
 
-		<!-- Contact -->
-			<article id="contact" class="wrapper style4">
-				<div class="container medium">
-							<h3>Find me on ...</h3>
-							<ul class="social">
-							<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+	<!-- Portfolio -->
+	<article id="portfolio" class="wrapper style3">
+		<div class="container">
+			<header>
+				<h2>Here’s some stuff I made recently.</h2>
+				<p></p>
+			</header>
+			<div class="row">
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c"
+							class="image featured"><img src="images/diagram.jpg" alt="" /></a>
+						<h3><a
+								href="https://dev.to/jotin2/navigating-the-cloud-resume-challenge-my-journey-to-a-cloud-powered-portfolio-2a1c">Cloud
+								Resume Challenge Blog</a></h3>
+						<p>Published a Dev.to blog detailing the steps I did to create this cloud powered portfolio</p>
+						<a href="https://github.com/Jotin2/aws-portfolio">
+							<p>Github Repository</p>
+						</a>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://josh-asari-yelp-clone.xyz/" class="image featured"><img src="images/yelp.png"
+								alt="" /></a>
+						<h3><a href="https://josh-asari-yelp-clone.xyz/">Restaurant Finder</a></h3>
+						<p>Restaurant finder website. Built with PERN stack and deployed on an
+							Ubuntu AWS EC2 Instance</p><a href="https://github.com/Jotin2/yelp">
+							<p>Github Repository</p>
+						</a>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://joshsnhu2.s3.amazonaws.com/index.html" class="image featured"><img
+								src="images/qapic.png" alt="" /></a>
+						<h3><a href="https://joshsnhu2.s3.amazonaws.com/index.html">Q&A Website</a></h3>
+						<p>Allows users to post and ask questions. Built with
+							MERN stack.</p><a href="https://github.com/Jotin2/lafs-web">
+							<p>Github Repository</p>
+						</a>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="https://todo-app-twe3.onrender.com/" class="image featured"><img
+								src="images/todoapppic.png" alt="" /></a>
+						<h3><a href="https://todo-app-twe3.onrender.com/">Todo App</a></h3>
+						<p>The Todo App is a task management tool built using HTML, CSS, and primarily React </p><a
+							href="https://github.com/Jotin2/todo-app">
+							<p>Github Repository</p>
+						</a>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+						<h3><a href="#">Work in Progress</a></h3>
+						<p>Check back later</p>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
+						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<h3><a href="#">Work in Progress</a></h3>
+						<p>Check back later</p>
+					</article>
+				</div>
+			</div>
+			<footer>
+				<p></p>
+				<a href="#contact" class="button large scrolly">Get in touch with me</a>
+			</footer>
+		</div>
+	</article>
+
+	<!-- Contact -->
+	<article id="contact" class="wrapper style4">
+		<div class="container medium">
+			<h3>Find me on ...</h3>
+			<ul class="social">
+				<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->	
-								<li><a href="https://www.linkedin.com/in/joshua-asari/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<!--<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
+								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>-->
+				<li><a href="https://www.linkedin.com/in/joshua-asari/" class="icon brands fa-linkedin-in"><span
+							class="label">LinkedIn</span></a></li>
+				<!--<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
 								<li><a href="#" class="icon brands fa-google-plus"><span class="label">Google+</span></a></li> -->
-								<li><a href="https://github.com/Jotin2" class="icon brands fa-github"><span class="label">Github</span></a></li>
-								<!--
+				<li><a href="https://github.com/Jotin2" class="icon brands fa-github"><span
+							class="label">Github</span></a></li>
+				<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
 								<li><a href="#" class="icon brands fa-foursquare"><span>Foursquare</span></a></li>
@@ -156,17 +189,18 @@
 								<li><a href="#" class="icon brands fa-flickr"><span>Flickr</span></a></li>
 								<li><a href="#" class="icon brands fa-vimeo"><span>Vimeo</span></a></li>
 								-->
-							</ul>
-				</div>
-			</article>
+			</ul>
+		</div>
+	</article>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/index.js"></script>
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+	<script src="assets/js/index.js"></script>
+</body>
+
 </html>
