--- a/website/index.html
+++ b/website/index.html
@@ -74,7 +74,7 @@
 				<div class="col-4 col-6-medium col-12-small">
 					<section class="box style1">
 						<span class="image fit"><img src="images/frontend_icon.jpg" alt="" /></span>
-						<h3>Beginner Front-end Developer</h3>
+						<h3>Eager Front-end Developer</h3>
 						<p>Venturing into front-end development to craft visually appealing and user-friendly
 							interfaces.</p>
 					</section>
@@ -126,7 +126,7 @@
 								src="images/qapic.png" alt="" /></a>
 						<h3><a href="https://joshsnhu2.s3.amazonaws.com/index.html">Q&A Website</a></h3>
 						<p>Allows users to post and ask questions. Built with
-							MERN stack.</p><a href="https://github.com/Jotin2/lafs-web">
+							MEAN stack.</p><a href="https://github.com/Jotin2/lafs-web">
 							<p>Github Repository</p>
 						</a>
 					</article>
