Added WIP Netflixx Clone

--- a/website/index.html
+++ b/website/index.html
@@ -122,6 +122,17 @@
 				</div>
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
+						<a href="https://netflix-clone-sand-mu.vercel.app/" class="image featured"><img
+								src="images/netflix-clone.png" alt="" /></a>
+						<h3><a href="https://netflix-clone-sand-mu.vercel.app/">Netflix Clone (WIP)</a>
+						</h3>
+						<p>Netflix-Clone:React, Tailwind CSS, Next.JS, Prisma, MongoDB, NextAuth</p><a
+							href="https://github.com/Jotin2/netflix-clone">
+							<p>Github Repository</p>
+					</article>
+				</div>
+				<div class="col-4 col-6-medium col-12-small">
+					<article class="box style2">
 						<a href="https://joshsnhu2.s3.amazonaws.com/index.html" class="image featured"><img
 								src="images/qapic.png" alt="" /></a>
 						<h3><a href="https://joshsnhu2.s3.amazonaws.com/index.html">Q&A Website</a></h3>
@@ -131,6 +142,7 @@
 						</a>
 					</article>
 				</div>
+
 				<div class="col-4 col-6-medium col-12-small">
 					<article class="box style2">
 						<a href="https://todo-app-twe3.onrender.com/" class="image featured"><img
@@ -142,20 +154,7 @@
 						</a>
 					</article>
 				</div>
-				<div class="col-4 col-6-medium col-12-small">
-					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-						<h3><a href="#">Work in Progress</a></h3>
-						<p>Check back later</p>
-					</article>
-				</div>
-				<div class="col-4 col-6-medium col-12-small">
-					<article class="box style2">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-						<h3><a href="#">Work in Progress</a></h3>
-						<p>Check back later</p>
-					</article>
-				</div>
+
 			</div>
 			<footer>
 				<p></p>
